--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 
 {
-  "presets": ["es2015", "flow"]
+  "presets": ["babel-preset-es2015", "babel-preset-flow"],
+  "plugins": ["transform-es2015-destructuring", "transform-object-rest-spread"]
 }
 
