--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ssretry",
-  "version": "1.0.4",
-  "main": "index.js",
+  "version": "1.0.5",
+  "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepublish": "node_modules/.bin/babel src --out-dir lib"
   },
-  "files": ["index.js", "__tests__"],
+  "files": [
+    "lib/index.js",
+    "lib/__tests__"
+  ],
   "devDependencies": {
     "babel-jest": "^20.0.3",
     "babel-plugin-transform-es2015-destructuring": "6.23.0",
@@ -13,7 +17,8 @@
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-flow": "^6.23.0",
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "babel-cli": "^6.26.0"
   },
   "author": "",
   "license": "ISC",
